--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@
 }
 
 #contact_icon {
-  height: 10%;
+  height: 15%;
   position: fixed;
   bottom: 60%;
   left: 90%;
@@ -54,7 +54,7 @@ body {
 }
 
 #menu h2 {
-  color: red;
+  color: #EB5905;
   margin-top: 15px;
   margin-right: 15px;
 }
@@ -162,7 +162,7 @@ footer * {
 }
 
 .selections {
-  margin-top: 10%;
+  margin-top: 6%;
 }
 
 @media (min-width: 320px) {
@@ -210,41 +210,39 @@ footer * {
   }
 }
 
-.brands {
-  width: 350px;
+#catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 1%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#catalog img {
+  width: 20%;
+}
+
+#kitchen_mdg {
   color: white;
-  border: 2px solid yellow;
-  margin: 10px;
+  margin: auto;
 }
 
-@media (min-width: 320px) {
-  .brands {
-    margin-top: 0px;
-    width: 130px;
-  }
-  .brands h2 {
-    font-size: 0.7rem;
-    margin-bottom: 0px;
-  }
+#kitchen_mdg h1 {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 75px;
 }
 
-@media (min-width: 768px) {
-  .brands {
-    margin-top: 0px;
-    width: 180px;
-  }
-  .brands h2 {
-    font-size: 1rem;
-    margin-bottom: 0px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .brands {
-    width: 350px;
-  }
-  .brands h2 {
-    font-size: 2rem;
-  }
+#kitchen_mdg span {
+  color: yellow;
 }
 /*# sourceMappingURL=style.css.map */
