--- a/style/style.scss
+++ b/style/style.scss
@@ -25,7 +25,7 @@ body {
     height: 200px;
 
     h2{
-        color: red;
+        color: #EB5905;
         margin-top: 15px;
         margin-right: 15px;
     }
@@ -116,7 +116,7 @@ footer{
 }
 
 .selections{
-    margin-top:10%;
+    margin-top:6%;
     @include sm {
         @include m2;
         img {
@@ -133,31 +133,26 @@ footer{
     } 
 }
 
-.brands{
-    width: 350px;
-    color: white;
-    border: 2px solid yellow;
-    margin: 10px;
+#catalog{
+    display: flex;
+    margin-top:1%;
+    @include displayRow;
+    img{
+        width: 20%;
+    }  
+}
 
-    @include sm { 
-        margin-top: 0px;
-        width: 130px; 
-        h2{ 
-            font-size: 0.7rem; 
-            margin-bottom: 0px;
-        }
-    } 
-    @include md { 
-        margin-top: 0px;
-        width: 180px; 
-        h2{ 
-            font-size: 1rem; 
-            margin-bottom: 0px;
-        }
-    } 
-    @include lg { 
-        width: 350px; 
-        h2{ font-size: 2rem; }
-    } 
+
+#kitchen_mdg{
+    color: white;
+    margin: auto;
+    h1{
+        margin-top: 30px;
+        text-align:center;
+        font-size: 75px;
+    }
+    span{
+        color: yellow;
+    }
 }
 
