--- a/style/style.scss
+++ b/style/style.scss
@@ -25,7 +25,7 @@ body {
     height: 200px;
 
     h2{
-        color: #EB5905;
+        color: $color_1;
         margin-top: 15px;
         margin-right: 15px;
     }
@@ -150,9 +150,18 @@ footer{
         margin-top: 30px;
         text-align:center;
         font-size: 75px;
+        span{
+            color: yellow;
+        }
     }
-    span{
-        color: yellow;
+    
+    h2{
+        text-align:center;
+        font-size: 45px;
+        span {
+            color: $color_1; 
+            cursor: pointer;
+        }
     }
 }
 
