--- a/style/style.scss
+++ b/style/style.scss
@@ -24,11 +24,24 @@ body {
     justify-content: space-between;
     height: 200px;
 
-    h2{
-        color: $color_1;
-        margin-top: 15px;
-        margin-right: 15px;
+    .r_menu{
+        display: flex;
+        flex-direction: row;
+
+        h2{
+            color: $color_1;
+            margin-top: 15px;
+            margin-right: 15px;
+        }
+
+        button{
+            margin-top: 15px;
+            margin-right: 15px;
+            height: 36px;
+        }
     }
+
+    
 }
 
 #main {
@@ -98,7 +111,7 @@ footer{
 }
 
 
-//kitchin
+//kitchen
 @mixin m1{
     height: 80%;
     display: flex;
@@ -163,6 +176,11 @@ footer{
             cursor: pointer;
         }
     }
+}
+
+.hbox{
+    color: $color_1;
+    text-align: center;
 }
 
 ///
@@ -253,3 +271,8 @@ footer{
   .demo:hover {
     opacity: 1;
   }
+
+///////galery page////
+.carousel-inner img {
+    margin: auto;
+}
