--- a/style/style.scss
+++ b/style/style.scss
@@ -276,3 +276,35 @@ footer{
 .carousel-inner img {
     margin: auto;
 }
+
+///////////////// custom page //////////////
+.dark{
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+}
+
+.cust_block{
+    padding-right: 5%;
+    padding-left: 5%;
+}
+
+.custom_main_block{
+    display: flex;
+    direction: row;
+    justify-content: space-around;
+}
+
+.custom_bottom{
+    
+    .info_block{
+        width:45%;
+        img{
+            width:100%;
+        }
+    }
+
+    h1{
+        background-color: black;
+        color:white;
+        text-align: center;
+    }
+} 
