--- a/style/style.css
+++ b/style/style.css
@@ -26,14 +26,14 @@
 #contact_icon {
   height: 15%;
   position: fixed;
-  bottom: 60%;
-  left: 90%;
+  bottom: 80%;
+  left: 87%;
   text-align: center;
 }
 
 body {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../picture/1.png");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../picture/1.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -51,6 +51,10 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 200px;
+}
+
+#menu h2 {
+  color: #EB5905;
 }
 
 #menu .r_menu {
@@ -73,6 +77,14 @@ body {
   margin-top: 15px;
   margin-right: 15px;
   height: 36px;
+}
+
+#menu .dropdown-menu {
+  background-color: yellow;
+}
+
+#menu .dropdown-menu :hover {
+  background-color: #EB5905;
 }
 
 @media (min-width: 320px) {
@@ -166,8 +178,8 @@ footer * {
 }
 
 #cabinet_footer {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../picture/1.png");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../picture/1.png");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
