--- a/style/common.scss
+++ b/style/common.scss
@@ -61,3 +61,8 @@ $break-Xlarge: 1250px;
     left: 87%;
     text-align: center;
 }
+
+.btn-outline-warning {
+    color:yellow;
+    border-color: yellow;
+}
