--- a/style/common.css
+++ b/style/common.css
@@ -30,4 +30,9 @@
   left: 87%;
   text-align: center;
 }
+
+.btn-outline-warning {
+  color: yellow;
+  border-color: yellow;
+}
 /*# sourceMappingURL=common.css.map */
