--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,11 @@
   text-align: center;
 }
 
+.btn-outline-warning {
+  color: yellow;
+  border-color: yellow;
+}
+
 body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.jpg");
