--- a/style/style.scss
+++ b/style/style.scss
@@ -320,6 +320,10 @@ footer{
     padding-left: 5%;
 }
 
+.ef:hover{
+    transform: scale(1.2, 1.2);
+}
+
 .custom_main_block{
     display: flex;
     direction: row;
