--- a/style/style.scss
+++ b/style/style.scss
@@ -332,8 +332,11 @@ footer{
 
 .custom_bottom{
     
+    background: white;
+    
     .info_block{
-        width:45%;
+        width:35%;
+        
         img{
             width:100%;
         }
