--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,10 @@
   border-color: yellow;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.png");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.png");
