--- a/style/common.scss
+++ b/style/common.scss
@@ -68,3 +68,10 @@ $break-Xlarge: 1250px;
 }
 
 .pointer {cursor: pointer;}
+
+#policy{
+    background-color: white;
+    width: 85%;
+    margin: auto;
+    padding: 15px;
+}
