--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,13 @@
   cursor: pointer;
 }
 
+#policy {
+  background-color: white;
+  width: 85%;
+  margin: auto;
+  padding: 15px;
+}
+
 body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.png");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.png");
@@ -121,7 +128,7 @@ body {
 }
 
 #menu .dropdown-menu {
-  background-color: yellow;
+  background-color: white;
 }
 
 #menu .dropdown-menu :hover {
@@ -193,7 +200,7 @@ body {
 }
 
 footer {
-  color: white;
+  color: #EB5905;
 }
 
 footer * {
