--- a/style/common.scss
+++ b/style/common.scss
@@ -1,5 +1,8 @@
 $color_1:#EB5905;
 
+.text-yellow{
+    color: yellow;
+}
 
 /*screen resolution*/
 $break-xsmall: 320px;
@@ -75,3 +78,4 @@ $break-Xlarge: 1250px;
     margin: auto;
     padding: 15px;
 }
+
