--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-*{
-    font-family: 'Questrial', sans-serif;
-}
-
 .text-yellow {
   color: yellow;
 }
@@ -26,8 +22,6 @@
 }
 
 #cntl_btns {
-  margin-top: -80px;
-  margin-bottom: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,7 +36,7 @@
 }
 
 #contact_icon {
-  height: 15%;
+  height: 10%;
   position: fixed;
   bottom: 80%;
   left: 87%;
@@ -65,6 +59,28 @@
   padding: 15px;
 }
 
+@font-face {
+  font-family: myFont1;
+  src: url("../fonts/Arvo-Regular.ttf");
+}
+
+@font-face {
+  font-family: myFont2;
+  src: url("../fonts/norwester.otf");
+}
+
+.f1 {
+  font-family: myFont1;
+}
+
+.f2 {
+  font-family: myFont2;
+}
+
+* {
+  font-family: myFont1;
+}
+
 body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/1.png");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/1.png");
@@ -74,6 +90,7 @@ body {
 }
 
 #b1 {
+  font-family: myFont1;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/bckg/1.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/bckg/1.jpg");
   background-size: cover;
@@ -146,7 +163,7 @@ body {
 }
 
 #menu .dropdown-menu {
-  background-color: silver;
+  background-color: white;
 }
 
 #menu .dropdown-menu :hover {
@@ -336,6 +353,7 @@ footer * {
 
 #kitchen_mdg h1 span {
   color: yellow;
+  font-family: myFont2;
 }
 
 #kitchen_mdg h2 {
@@ -346,6 +364,20 @@ footer * {
 #kitchen_mdg h2 span {
   color: #EB5905;
   cursor: pointer;
+}
+
+#kitchen_mdg1 {
+  color: white;
+  margin: auto;
+}
+
+#kitchen_mdg1 h2 {
+  text-align: center;
+  font-size: 35px;
+}
+
+#kitchen_mdg1 h2 span {
+  color: #EB5905;
 }
 
 .hbox {
