--- a/style/style.scss
+++ b/style/style.scss
@@ -383,3 +383,11 @@ footer{
         text-align: center;
     }
 } 
+
+/// form example
+.panel{
+    background-color: rgb(251, 255, 0);
+    opacity: .4;
+    height: 100vh;
+}
+
