--- a/style/style.css
+++ b/style/style.css
@@ -520,4 +520,10 @@ footer * {
   color: white;
   text-align: center;
 }
+
+.panel {
+  background-color: #fbff00;
+  opacity: .4;
+  height: 100vh;
+}
 /*# sourceMappingURL=style.css.map */
