--- a/style/style.scss
+++ b/style/style.scss
@@ -386,8 +386,28 @@ footer{
 
 /// form example
 .panel{
-    background-color: rgb(251, 255, 0);
-    opacity: .4;
+    background: linear-gradient(rgba(252, 236, 10, 0.6));
     height: 100vh;
+}
+
+.uploadBtn{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    input{
+        margin-left: 30%;
+    }
+}
+
+.uploadCtrBtn{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    button{
+        width:80px;
+        margin-right: 3%; 
+        margin-left: 3%;
+    }
+    
 }
 
