--- a/style/common.css
+++ b/style/common.css
@@ -11,8 +11,25 @@
 }
 
 /*screen resolution*/
-#logo {
-  width: 350px;
+@media (min-width: 320px) {
+  #logo {
+    width: 130px;
+    height: 100px;
+  }
+}
+
+@media (min-width: 768px) {
+  #logo {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #logo {
+    width: 350px;
+    height: 200px;
+  }
 }
 
 #bfooter {
@@ -39,8 +56,30 @@
   height: 10%;
   position: fixed;
   bottom: 80%;
-  left: 87%;
-  text-align: center;
+}
+
+@media (min-width: 320px) {
+  #contact_icon {
+    left: 70%;
+  }
+}
+
+@media (min-width: 768px) {
+  #contact_icon {
+    left: 80%;
+  }
+}
+
+@media (min-width: 1024px) {
+  #contact_icon {
+    left: 85%;
+  }
+}
+
+@media (min-width: 1250px) {
+  #contact_icon {
+    left: 87%;
+  }
 }
 
 .btn-outline-warning {
