--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,25 @@
 }
 
 /*screen resolution*/
-#logo {
-  width: 350px;
+@media (min-width: 320px) {
+  #logo {
+    width: 130px;
+    height: 100px;
+  }
+}
+
+@media (min-width: 768px) {
+  #logo {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #logo {
+    width: 350px;
+    height: 200px;
+  }
 }
 
 #bfooter {
@@ -39,8 +56,30 @@
   height: 10%;
   position: fixed;
   bottom: 80%;
-  left: 87%;
-  text-align: center;
+}
+
+@media (min-width: 320px) {
+  #contact_icon {
+    left: 70%;
+  }
+}
+
+@media (min-width: 768px) {
+  #contact_icon {
+    left: 80%;
+  }
+}
+
+@media (min-width: 1024px) {
+  #contact_icon {
+    left: 85%;
+  }
+}
+
+@media (min-width: 1250px) {
+  #contact_icon {
+    left: 87%;
+  }
 }
 
 .btn-outline-warning {
@@ -155,10 +194,19 @@ body {
           flex-direction: row;
 }
 
-#menu .r_menu h2 {
-  color: #EB5905;
-  margin-top: 15px;
-  margin-right: 15px;
+@media (min-width: 320px) {
+  #menu .r_menu h2 {
+    font-size: 17px;
+    color: #EB5905;
+    margin-top: 15px;
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 768px) {
+  #menu .r_menu h2 {
+    font-size: 2rem;
+  }
 }
 
 #menu .r_menu button {
@@ -350,39 +398,141 @@ footer * {
   margin: auto;
 }
 
-#kitchen_mdg h1 {
-  margin-top: 30px;
-  text-align: center;
-  font-size: 75px;
+@media (min-width: 320px) {
+  #kitchen_mdg {
+    margin-bottom: 30px;
+  }
+  #kitchen_mdg h1 {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 17px;
+  }
+  #kitchen_mdg h1 span {
+    color: yellow;
+    font-family: myFont2;
+  }
+  #kitchen_mdg h2 {
+    text-align: center;
+    font-size: 15px;
+  }
+  #kitchen_mdg h2 span {
+    color: #EB5905;
+    cursor: pointer;
+  }
 }
 
-#kitchen_mdg h1 span {
-  color: yellow;
-  font-family: myFont2;
+@media (min-width: 768px) {
+  #kitchen_mdg h1 {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 40px;
+  }
+  #kitchen_mdg h1 span {
+    color: yellow;
+    font-family: myFont2;
+  }
+  #kitchen_mdg h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+  #kitchen_mdg h2 span {
+    color: #EB5905;
+    cursor: pointer;
+  }
 }
 
-#kitchen_mdg h2 {
-  text-align: center;
-  font-size: 45px;
+@media (min-width: 1024px) {
+  #kitchen_mdg h1 {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 50px;
+  }
+  #kitchen_mdg h1 span {
+    color: yellow;
+    font-family: myFont2;
+  }
+  #kitchen_mdg h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+  #kitchen_mdg h2 span {
+    color: #EB5905;
+    cursor: pointer;
+  }
 }
 
-#kitchen_mdg h2 span {
-  color: #EB5905;
-  cursor: pointer;
+@media (min-width: 1250px) {
+  #kitchen_mdg h1 {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 75px;
+  }
+  #kitchen_mdg h1 span {
+    color: yellow;
+    font-family: myFont2;
+  }
+  #kitchen_mdg h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+  #kitchen_mdg h2 span {
+    color: #EB5905;
+    cursor: pointer;
+  }
 }
 
 #kitchen_mdg1 {
   color: white;
   margin: auto;
+  margin-top: 5%;
 }
 
 #kitchen_mdg1 h2 {
   text-align: center;
-  font-size: 35px;
 }
 
 #kitchen_mdg1 h2 span {
   color: #EB5905;
+}
+
+@media (min-width: 320px) {
+  #kitchen_mdg1 h2 {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  #kitchen_mdg1 h2 {
+    font-size: 26px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #kitchen_mdg1 h2 {
+    font-size: 35px;
+  }
+}
+
+#kitch_get_quote_btn {
+  margin-top: 5%;
+}
+
+@media (min-width: 320px) {
+  #kitch_get_quote_btn img {
+    width: 200px;
+  }
+}
+
+@media (min-width: 768px) {
+  #kitch_get_quote_btn img {
+    width: 400px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #kitch_get_quote_btn img {
+    width: 600px;
+  }
 }
 
 .hbox {
