--- a/style/style.scss
+++ b/style/style.scss
@@ -72,11 +72,15 @@ body{
         display: flex;
         flex-direction: row;
 
-        h2{
-            color: $color_1;
-            margin-top: 15px;
-            margin-right: 15px;
+        @include sm { 
+            h2{
+                font-size: 17px;
+                color: $color_1;
+                margin-top: 15px;
+                margin-right: 15px;
+            }
         }
+        @include md { h2{font-size: 2rem;}}
 
         button{
             margin-top: 15px;
@@ -180,6 +184,11 @@ footer{
     align-items: center;
 }
 
+@mixin msg_white{
+    color: white;
+    margin: auto;
+}
+
 .selections{
     margin-top:6%;
     @include sm {
@@ -209,41 +218,112 @@ footer{
 
 
 #kitchen_mdg{
-    color: white;
-    margin: auto;
-    h1{
-        margin-top: 30px;
-        text-align:center;
-        font-size: 75px;
-        span{
-            color: yellow;
-            font-family:myFont2;
+    @include msg_white;
+
+    @include sm { 
+        margin-bottom: 30px;
+        h1{
+            margin-top: 15px;
+            
+            text-align:center;
+            font-size: 17px;
+            span{
+                color: yellow;
+                font-family:myFont2;
+            }
+        }
+        
+        h2{
+            text-align:center;
+            font-size: 15px;
+            span {
+                color: $color_1; 
+                cursor: pointer;
+            }
         }
     }
-    
-    h2{
-        text-align:center;
-        font-size: 45px;
-        span {
-            color: $color_1; 
-            cursor: pointer;
+    @include md { 
+        h1{
+            margin-top: 20px;
+            text-align:center;
+            font-size: 40px;
+            span{
+                color: yellow;
+                font-family:myFont2;
+            }
+        }
+        
+        h2{
+            text-align:center;
+            font-size: 45px;
+            span {
+                color: $color_1; 
+                cursor: pointer;
+            }
+        }
+    }
+    @include lg { 
+        h1{
+            margin-top: 30px;
+            text-align:center;
+            font-size: 50px;
+            span{
+                color: yellow;
+                font-family:myFont2;
+            }
+        }
+        
+        h2{
+            text-align:center;
+            font-size: 45px;
+            span {
+                color: $color_1; 
+                cursor: pointer;
+            }
+        }
+    }
+    @include Xlg { 
+        h1{
+            margin-top: 30px;
+            text-align:center;
+            font-size: 75px;
+            span{
+                color: yellow;
+                font-family:myFont2;
+            }
+        }
+        
+        h2{
+            text-align:center;
+            font-size: 45px;
+            span {
+                color: $color_1; 
+                cursor: pointer;
+            }
         }
     }
 }
 
 #kitchen_mdg1{
-    color: white;
-    margin: auto;
-    
+
+    @include msg_white;
+    margin-top: 5%;
     h2{
         text-align:center;
-        font-size: 35px;
-        span {
-            color: $color_1; 
-        }
+        span { color: $color_1; }
     }
+
+    @include sm{ h2 {font-size: 12px;}}
+    @include md{ h2 {font-size: 26px;}}
+    @include lg{ h2 {font-size: 35px;}}
 }
 
+#kitch_get_quote_btn{
+    margin-top: 5%;
+    @include sm{ img { width:200px; } }
+    @include md{ img { width:400px; } }
+    @include lg{ img { width:600px; } }
+}
 
 
 .hbox{
