--- a/style/common.css
+++ b/style/common.css
@@ -32,6 +32,18 @@
   }
 }
 
+@media (min-width: 320px) {
+  footer {
+    font-size: 0.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  footer {
+    font-size: 1rem;
+  }
+}
+
 #bfooter {
   position: fixed;
   bottom: 0;
