--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,18 @@
   }
 }
 
+@media (min-width: 320px) {
+  footer {
+    font-size: 0.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  footer {
+    font-size: 1rem;
+  }
+}
+
 #bfooter {
   position: fixed;
   bottom: 0;
@@ -674,6 +686,24 @@ footer * {
   background-color: black;
   color: white;
   text-align: center;
+}
+
+@media (min-width: 320px) {
+  .custom_bottom h1 {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .custom_bottom h1 {
+    font-size: 26px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .custom_bottom h1 {
+    font-size: 45px;
+  }
 }
 
 .panel {
