--- a/style/common.scss
+++ b/style/common.scss
@@ -75,6 +75,7 @@ footer{
 #cntl_btns{
     display: flex;
     justify-content: center;
+    margin-bottom: 2%;
     button{
         margin-left: 15px;
         margin-right: 15px;
