--- a/style/common.css
+++ b/style/common.css
@@ -57,6 +57,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 2%;
 }
 
 #cntl_btns button {
