--- a/style/style.css
+++ b/style/style.css
@@ -14,14 +14,14 @@
 @media (min-width: 320px) {
   #logo {
     width: 130px;
-    height: 100px;
+    height: 74px;
   }
 }
 
 @media (min-width: 768px) {
   #logo {
     width: 300px;
-    height: 200px;
+    height: 170px;
   }
 }
 
@@ -68,7 +68,7 @@
 #contact_icon {
   height: 10%;
   position: fixed;
-  bottom: 80%;
+  bottom: 70%;
 }
 
 @media (min-width: 320px) {
@@ -189,7 +189,24 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 200px;
+}
+
+@media (min-width: 320px) {
+  #menu {
+    height: 85px;
+  }
+}
+
+@media (min-width: 768px) {
+  #menu {
+    height: 170px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #menu {
+    height: 200px;
+  }
 }
 
 #menu h2 {
@@ -251,7 +268,7 @@ body {
   #main img {
     width: 200px;
     border-radius: 3px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 }
 
