--- a/style/style.scss
+++ b/style/style.scss
@@ -61,11 +61,12 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 200px;
+    
+    @include sm { height: 85px; }
+    @include md { height: 170px; }
+    @include lg { height: 200px; }
 
-    h2{
-        color: $color_1; 
-    }
+    h2{ color: $color_1; }
 
     .r_menu{
         display: flex;
@@ -90,12 +91,9 @@ body{
 
     .dropdown-menu{
         background-color: white;
-        :hover{
-            background-color: $color_1;
-        }
+        :hover{ background-color: $color_1; }
     }
 }
-
 
 
 #main {
@@ -106,7 +104,7 @@ body{
         img {
             width: 200px;
             border-radius: 3px;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }  
     } 
 
