--- a/style/style.scss
+++ b/style/style.scss
@@ -428,8 +428,46 @@ footer{
 }
 
 .cust_block{
-    padding-right: 5%;
-    padding-left: 5%;
+    padding-right: 2%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    @include sm{ 
+        flex-direction: column; 
+        .s_pic{ 
+            width: 70%;
+            max-height: 150px;
+        }
+        .fmiddle_pic{ display: none; }
+        .smiddle_pic{ 
+            width: 20%;
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
+    }
+
+    @include md{ 
+        flex-direction: row; 
+        .s_pic{ 
+            width: 40%;
+            max-height: 225px;
+        }
+        .smiddle_pic{ display: none; }
+        .fmiddle_pic{ 
+            display: block; 
+            width: 8%;
+            margin-right: 2%;
+            margin-left: 2%;
+        }
+    }
+
+    @include Xlg{ 
+        .s_pic{ 
+            max-height: 270px;
+        }
+    }
 }
 
 .ef:hover{
@@ -448,10 +486,7 @@ footer{
     
     .info_block{
         width:35%;
-        
-        img{
-            width:100%;
-        }
+        img{ width:100%;}
     }
 
     h1{
