--- a/style/style.css
+++ b/style/style.css
@@ -148,6 +148,22 @@
   background-attachment: fixed;
 }
 
+#b2a {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/bckg/2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/bckg/2.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#b3a {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../picture/bckg/3.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../picture/bckg/3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 @media (min-width: 320px) {
   #b2 {
     background-color: black;
