--- a/style/style.css
+++ b/style/style.css
@@ -445,8 +445,22 @@ footer * {
           justify-content: center;
 }
 
-#catalog img {
-  width: 30%;
+@media (min-width: 320px) {
+  #catalog img {
+    width: 45%;
+  }
+}
+
+@media (min-width: 768px) {
+  #catalog img {
+    width: 25%;
+  }
+}
+
+@media (min-width: 1024px) {
+  #catalog img {
+    width: 20%;
+  }
 }
 
 #kitchen_mdg {
