--- a/style/style.css
+++ b/style/style.css
@@ -822,10 +822,95 @@ footer * {
   }
 }
 
+.forms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
+@media (min-width: 320px) {
+  .forms {
+    height: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .forms {
+    height: 100%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .forms {
+    height: 100vh;
+  }
+}
+
+@media (min-width: 1250px) {
+  .forms {
+    height: 100vh;
+  }
+}
+
+.empty_div {
+  height: 100%;
+}
+
+@media (min-width: 320px) {
+  .empty_div {
+    display: 2%;
+  }
+}
+
+@media (min-width: 768px) {
+  .empty_div {
+    width: 10%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .empty_div {
+    width: 25%;
+  }
+}
+
+@media (min-width: 1250px) {
+  .empty_div {
+    width: 30%;
+  }
+}
+
 .panel {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(252, 236, 10, 0.6)));
   background: linear-gradient(rgba(252, 236, 10, 0.6));
-  height: 100vh;
+  height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (min-width: 320px) {
+  .panel {
+    width: 96%;
+  }
+}
+
+@media (min-width: 768px) {
+  .panel {
+    width: 80%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .panel {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1250px) {
+  .panel {
+    width: 40%;
+  }
 }
 
 .uploadBtn {
